# large-mambo-model

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  PAPER.md  README.md  SECURITY.md
.github/workflows/: ci.yml
datagen/: beatbox.py  bootstrap.py  golden.py  samples_refs.py  synth.py
docs/figures/: render.sh  social_card.html
finetune/: README.md  b6_qwen_raw.json  modal_app.py  qwen2_audio_lora.yaml
fixtures/golden/: confabulations_whisper.json  manifest.jsonl  syn_can_bass_040_clean.plan.json  (+99 more)
lab/: pyproject.toml
lab/mambo_lab/: __init__.py  actions.py  cli.py  dual_decode.py  eleven.py  fuse.py  ir.py  melody.py  oracle.py  percussion.py  planner.py  probe.py  router.py  secrets.py  semantic_verify.py  session.py  settings.py  speech.py  studio.py  studio_ui.html  voiceprint.py
lab/mambo_lab/daw/: __init__.py  reaper.py
lab/mambo_lab/eval/: __init__.py  ablation.py  autolabel.py  b6_frontier.py  b6_omni.py  b6_qwen.py  basicpitch_baseline.py  bench.py  dual_decode_eval.py  elive_baselines.py  gate.py  metrics.py  multiseed.py  semantic_reason_eval.py  voicebench.py  voiceprint_eval.py  voices.py
lab/mambo_lab/finetune/: __init__.py  dataset.py
lab/tests/: test_actions.py  test_b6.py  test_dual_decode.py  test_imports.py  test_ir.py  test_melody.py  test_metrics.py  test_percussion.py  test_planner_backend.py  test_reaper.py  test_router.py  test_semantic_verify.py  test_session.py  test_settings.py  test_studio.py  test_voiceprint.py
scripts/: build_pdf.sh
(+352 files in other folders)
